Add UIKit and Random Dev Excuse as title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <!-- UIKIT -->
+      <!-- UIkit CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/css/uikit.min.css" />
+      <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
+
+    <meta charset="UTF-8">
+    <script src="/index.js"></script>
+    <title>tomiolah1998's homepage</title>
+  </head>
+
   <body>
     <h1>HELLO GITHUB PAGES!</h1>
   </body>
