Rephrase Riverbed section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h6 class="iosevka"><a href="http://www.cs.ubbcluj.ro/en/"> Babeș-Bolyai University, Cluj-Napoca</a></h6>
                     <p>In college, among mathematics (dynamic systems, geometry, algebra, etc.) I have been learning about data structures, algorithms, operating systems, artificial intelligence, web development, software engineering, and many other standard computer science-related topics.
                       Here I fell in love with functional programming, Python, Javascript (unironically), Linux and Docker.
-                      My thesis was a full-stack social platform based on PostgreSQL, Python (FastAPI framework), React, and Docker.</p>
+                      My thesis was written in english and its topic was a full-stack social platform based on PostgreSQL, Python (FastAPI framework), React, and Docker.</p>
                   </div>
                 </div>
               </li>
@@ -81,7 +81,7 @@
                   <div class="content">
                      <h5 class="iosevka">Assistant Programmer (Part-Time)<br/>(11<sup>st</sup> March, 2019 - 31<sup>st</sup> January, 2020)</h5>
                      <h6 class="iosevka"><a href="https://www.riverbed.com/"> Riverbed Technology Labs, Cluj-Napoca</a></h6>
-                     <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Python (Flask framework), Hashicorp Terraform, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. I learned a lot during my employment here, and this experience marked the point, where I started to see how everything, that I've previously learnt works together in complex applications. I also learned a lot about cooperation in a professional team, as well as project management.</p>
+                     <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Python (Flask framework), Hashicorp Terraform, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything (that I've previously learnt) works together in complex applications. I also learned a lot about cooperation in a professional team, as well as project management.</p>
                   </div>
                 </div>
               </li>
