Fix ordinal number typo

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <li>
                 <div class="card">
                   <div class="content">
-                     <h5 class="iosevka">Assistant Programmer (Part-Time)<br/>(11<sup>st</sup> March, 2019 - 31<sup>st</sup> January, 2020)</h5>
+                     <h5 class="iosevka">Assistant Programmer (Part-Time)<br/>(11<sup>th</sup> March, 2019 - 31<sup>st</sup> January, 2020)</h5>
                      <h6 class="iosevka"><a href="https://www.riverbed.com/"> Riverbed Technology Labs, Cluj-Napoca</a></h6>
                      <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Python (Flask framework), Hashicorp Terraform, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything (that I've previously learnt) works together in complex applications. I also learned a lot about cooperation in a professional team, as well as project management.</p>
                   </div>
