Add AWS, Ansible, SLS, Cirrus, Bulma and Vagrant

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <div class="content">
                      <h5 class="iosevka">Assistant Programmer (Part-Time)<br/>(11<sup>th</sup> March, 2019 - 31<sup>st</sup> January, 2020)</h5>
                      <h6 class="iosevka"><a href="https://www.riverbed.com/"> Riverbed Technology Labs, Cluj-Napoca</a></h6>
-                     <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Python (Flask framework), Hashicorp Terraform, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything (that I've previously learnt) works together in complex applications. I also learned a lot about cooperation in a professional team, as well as project management.</p>
+                     <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Vagrant, Python (Flask framework), Serverless Framework, Hashicorp Terraform, Ansible, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything (that I've previously learnt) works together in complex applications. I also learned a lot about cooperation in a professional team, as well as project management.</p>
                   </div>
                 </div>
               </li>
@@ -116,12 +116,14 @@
                   <div class="content">
                      <h5 class="iosevka"><i class="fa fa-wrench" aria-hidden="true"></i> Tools & Technologies</h5>
                      <ul class="no-bullets">
-                        <li><b>Docker</b><li>
+                        <li><b>Docker</b>, Vagrant<li>
                         <li><b>Git</b></li>
                         <li><b>Linux</b></li>
+                        <li>Amazon Web Services</li>
+                        <li>Terraform, Ansible, Serverless Framework</li>
                         <li>React</li>
-                        <li>Bootstrap</li>
-                        <li>NGINX / Caddy</li>
+                        <li>Bootstrap, Cirrus, Bulma</li>
+                        <li>NGINX, Caddy</li>
                         <li>CI / CD</li>
                      </ul>
                   </div>
