Specify frontend and NodeJS for JS

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                      <h5 class="iosevka"><i class="fa fa-laptop-code" aria-hidden="true"></i> Programming Languages</h5>
                      <ul class="no-bullets">
                        <li><b>Python</b><li>
-                       <li><b>JavaScript</b></li>
+                       <li><b>JavaScript</b> (frontend & NodeJS)</li>
                        <li>Shell Script</li>
                        <li>C, C++, Java, Swift</li>
                        <li>Prolog, Haskell</li>
