Reword Uni and RVBD sections

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="content">
                      <h5 class="iosevka">Mathematics and Computer Science, Intensive English<br/>(2013-2017)</h5>
                      <h6 class="iosevka"><a href="http://janoszsigmond.ro"> János Zsigmond Unitarian High School, Cluj-Napoca</a></h6>
-                     <p>During my high school years I was given a strong foundation in computer science and informatics, through algorithms in pseudo-code and C++. During these years I also acquired my <b>European Computer Driving Licence (ECDL)</b>, and my <b>C1 Advanced Cambridge English Certificate</b>.</p>
+                     <p>During my high school years I was given a strong foundation in computer science basics, through algorithms in pseudo-code and C++. During these years I have also acquired my <b>European Computer Driving Licence (ECDL)</b>, and my <b>C1 Advanced Cambridge English Certificate</b>.</p>
                   </div>
                 </div>
               </li>
@@ -58,7 +58,7 @@
                  <div class="content">
                     <h5 class="iosevka">Bachelor's degree in Computer Science<br/>(2017-2020)</h5>
                     <h6 class="iosevka"><a href="http://www.cs.ubbcluj.ro/en/"> Babeș-Bolyai University, Cluj-Napoca</a></h6>
-                    <p>In college, among mathematics (dynamic systems, geometry, algebra, etc.) I have been learning about data structures, algorithms, operating systems, artificial intelligence, web development, software engineering, and many other standard computer science-related topics.
+                    <p>In college, among mathematics (dynamic systems, geometry, algebra, etc.) I have been learning about data structures, algorithms, operating systems, artificial intelligence, web development, software engineering, software security, cryptography, OOP, functional programming, and other CS-related concepts.
                       Here I fell in love with functional programming, Python, Javascript (unironically), Linux and Docker.
                       My thesis was written in english and its topic was a full-stack social platform based on PostgreSQL, Python (FastAPI framework), React, and Docker.</p>
                   </div>
@@ -75,7 +75,7 @@
                   <div class="content">
                      <h5 class="iosevka">Assistant Programmer (Part-Time)<br/>(11<sup>th</sup> March, 2019 - 31<sup>st</sup> January, 2020)</h5>
                      <h6 class="iosevka"><a href="https://www.riverbed.com/"> Riverbed Technology Labs, Cluj-Napoca</a></h6>
-                     <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Vagrant, Python (Flask framework), Serverless Framework, Hashicorp Terraform, Ansible, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything (that I've previously learnt) works together in complex applications. I also learned a lot about cooperation in a professional team, as well as project management.</p>
+                     <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Vagrant, Python (Flask framework), Serverless Framework, Hashicorp Terraform, Ansible, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything, that I have learnt, works together in complex applications. I have also gained insight into cooperation in a professional team, and into project management.</p>
                   </div>
                 </div>
               </li>
