Add tech-support page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- Minified Cirrus CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.5.5/dist/cirrus.min.css">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index_files/index.css">
 
-    <script src="/index.js"></script>
+    <script src="/index_files/index.js"></script>
   </head>
 
   <body>
