Rework support page URL

--- a/support/index.html
+++ b/support/index.html
@@ -12,7 +12,7 @@
   <!-- Minified Cirrus CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.5.5/dist/cirrus.min.css">
 
-  <link rel="stylesheet" href="/support_files/index.css">
+  <link rel="stylesheet" href="/support/index.css">
 </head>
 <body>
   <h1>Technikai segítségnyújtás közérthető nyelven</h1>
@@ -29,18 +29,18 @@
             <div class="card-container">
               <h4>Lassan indul be</h4>
               <p>A számítógép beindulásában a legjelentősebb elem a tárhely, mivel az operációs rendszer beállításait mind be kell töltse a processzor a memóriában. Ha gyorsan tudja kiolvasni ezeket a beállításokat a számítógép, akkor sokkal gyorsabb a beindulás. Jelenleg két tárhely-technológia van forgalomban: <b>HDD (Hard Disk Drive)</b> és <b>SSD (Solid State Drive).</b></p>
-              <ul id="hdd_ssd" class="no-bullets">
+              <ul id="hdd_ssd" class="no-bullets row">
 
                 <li class="card">
                   <div class="card-container">
-                    <h5>HDD</h5> <img src="/img/hdd.gif" width="30%" alt="HDD">
+                    <h5>HDD</h5> <img src="/img/hdd.gif" width="20%" alt="HDD">
                     <p>A HDD (Hard Disk Drive) elektromágneses tárolóezköz, nagy vonalakban leírva, olyan, mint egy bakelitlemez: van egy mágneses korong, amin az adatok vannak tárolva, és van egy tű, amely az adatokat olvassa, írja, törli, vagy módosítja. A mágneses korong forog, és a tű így kerül arra a helyre, ahol az adatok tárolva vannak a korongon. Mivel forog, így a sebessége korlátozva van a mechanika miatt, illetve annak érdekében, hogy ne keletkezzen túl nagy hő a surlódás következtében. Mivel lassabban forog a korong, ezért a tű is lassabban jut el a helyére, és így késleltetve van az adatok olvasása is, vagyis lassabb a beindulás, viszont utána "helyre jön" a gép, a gyorsítótárazásnak köszönhetően - ezt az operációs rendszer (Windows / Linux / MacOS) intézi a háttérben.</p>
                   </div>
                 </li>
 
                 <li class="card">
                   <div class="card-container">
-                    <h5>SSD</h5> <img src="/img/ssd.jpg" width="30%" alt="SSD">
+                    <h5>SSD</h5> <img src="/img/ssd.jpg" width="20%" alt="SSD">
                     <p>Az SSD (Solid State Drive) egy olyan tárolóeszköz, mely a HDD-vel ellentétben nem tartalmaz mozgó alkatrészeket. Ez úgy lehetséges, hogy a tárolóegység tárhely-chip-ekből áll (általában NAND Flash tároló), melyeket egy központi kontroller vezérel. SSD esetén az adattárolás teljesen elektromos alapú, és így nincs limitálva a mechanika megszorításai által. Ebből adódóan az SSD sokkal gyorsabb mint a HDD.</p>
                   </div>
                 </li>
