--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
             </h6>
           </div>
           <div class="u-center">
-            <h1><a href="https://www.facebook.com/tomi.olah.31"><i class="fab fa-facebook text-info" aria-hidden="true"></i></a></h1>&nbsp;
-            <h1><a href="https://www.linkedin.com/in/tomiolah1998/"><i class="fab fa-linkedin text-info" aria-hidden="true"></i></a></h1>&nbsp;
-            <h1><a href="https://github.com/tomiolah1998"><i class="fab fa-github text-dark" aria-hidden="true"></i></a></h1>&nbsp;
-            <h1><a href="https://gitlab.com/tomiolah1998"><i class="fab fa-gitlab gl" aria-hidden="true"></i></a></h1>&nbsp;
+            <h1 class="contact-icon"><a href="https://www.facebook.com/tomi.olah.31"><i class="fab fa-facebook text-info" aria-hidden="true"></i></a></h1>&nbsp;
+            <h1 class="contact-icon"><a href="https://www.linkedin.com/in/tomiolah1998/"><i class="fab fa-linkedin text-info" aria-hidden="true"></i></a></h1>&nbsp;
+            <h1 class="contact-icon"><a href="https://github.com/tomiolah1998"><i class="fab fa-github text-dark" aria-hidden="true"></i></a></h1>&nbsp;
+            <h1 class="contact-icon"><a href="https://gitlab.com/tomiolah1998"><i class="fab fa-gitlab gl" aria-hidden="true"></i></a></h1>&nbsp;
           </div>
         </div>
+        <a class="btn btn-info btn-animated" href="/docs/Olah_Tamas-Lajos_CV.pdf" download>
+          <h5 class="iosevka">Download CV as PDF</h5>
+        </a>
       </div>
       <div class="col">
         <div class="container">
