--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <li>
                 <div class="card">
                   <div class="content">
-                     <h5 class="iosevka">Assistant Programmer (Part-Time)<br/>(11<sup>th</sup> March, 2019 - 31<sup>st</sup> January, 2020)</h5>
+                     <h5 class="iosevka">Part-Time Assistant Programmer<br/>(2019-2020)</h5>
                      <h6 class="iosevka"><a href="https://www.riverbed.com/"> Riverbed Technology Labs, Cluj-Napoca</a></h6>
                      <p>I was working in the Cloud Operations Team, using tools such as Git, Docker, Vagrant, Python (Flask framework), Serverless Framework, Hashicorp Terraform, Ansible, Hashicorp Vault, Amazon Web Services, and the Atlassian Stack - JIRA, Bamboo, BitBucket, Confluence. This experience marked the point, where I started to see how everything, that I have learnt, works together in complex applications. I have also gained insight into cooperation in a professional team, and into project management.</p>
                   </div>
