Update GitHub username

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="u-center">
             <h1 class="contact-icon"><a href="https://www.facebook.com/tomi.olah.31"><i class="fab fa-facebook text-info" aria-hidden="true"></i></a></h1>&nbsp;
             <h1 class="contact-icon"><a href="https://www.linkedin.com/in/tomiolah1998/"><i class="fab fa-linkedin text-info" aria-hidden="true"></i></a></h1>&nbsp;
-            <h1 class="contact-icon"><a href="https://github.com/tomiolah1998"><i class="fab fa-github text-dark" aria-hidden="true"></i></a></h1>&nbsp;
+            <h1 class="contact-icon"><a href="https://github.com/tomiolah"><i class="fab fa-github text-dark" aria-hidden="true"></i></a></h1>&nbsp;
             <h1 class="contact-icon"><a href="https://gitlab.com/tomiolah1998"><i class="fab fa-gitlab gl" aria-hidden="true"></i></a></h1>&nbsp;
           </div>
         </div>
